<resources>
    <string name="app_name">FR</string>

    <string name="chat">Chats</string>
    <string name="settings">Home</string>
    <string name="skip">Skip</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="love">Loves</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="selected_done">Hoàn thành</string>
    <string name="hint_email"> Nhập email </string>
    <string name="hint_password"> Nhập mật khẩu </string>
    <string name="hint_repassword"> Nhập lại mật khẩu </string>
    <string name="hint_name"> Nhập tên </string>
    <string name="login_note">Đăng nhập bằng Email mà bạn đã đăng ký</string>
    <string name="signup_note">Đăng ký tài khoản bằng email</string>
    <string name="my_profile">Hồ sơ của bạn</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ của bạn</string>

    <string name="profile">Thông tin cá nhân</string>
    <string name="friend">Lời mời kết nối</string>
    <string name="notifi">Thông báo</string>
    <string name="ranks">Bảng xếp hạng coin</string>
    <string name="logout">Đăng xuất</string>
    <string name="about">Về chúng tôi</string>
    <string name="helps">Trợ giúp</string>

    <!--Splash-->
    <string name="title1">Kết nối</string>
    <string name="des1">Thỏa sức tìm kiếm những người bạn ,tạo cảm giác thoải mái trong các mối quan hệ</string>
    <string name="title2">Tương tác</string>
    <string name="des2">Có cơ hội tìm kiếm một nửa yêu thương qua sự trợ giúp của ứng</string>
    <string name="title3">Thoải mái</string>
    <string name="des3">Giao diện thân thiện, chức năng dễ dàng sử dụng tăng sự trải nghiệm</string>
    <string name="nam">Nam</string>
    <string name="n">Nữ</string>

    <string-array name="reactions">
        <item>Thích</item>
        <item>Yêu</item>
        <item>Cười</item>
        <item>Wow</item>
        <item>Buồn</item>
        <item>Tức</item>
    </string-array>

    //hobby tag
    <string-array name="hobby">
        <item>Ănuống</item>
        <item>Nhiếpảnh</item>
        <item>Bóngđá</item>
        <item>Âmnhạc</item>
        <item>Phimảnh</item>
        <item>Chill</item>
        <item>Drama</item>
        <item>Anime</item>
        <item>Hộihọa</item>
        <item>Bóngrổ</item>
        <item>Câucá</item>
        <item>Võthuật</item>
        <item>Cườiđùa</item>
        <item>Tìnhyêu</item>
    </string-array>

    <string-array name="tag_color">
        <item>#ff6d00</item>
        <item>#ff1744</item>
        <item>#3d5afe</item>
        <item>#00c853</item>
        <item>#212121</item>
    </string-array>

    <string-array name="tag_color_hint">
        <item>#E9B37F</item>
        <item>#BD888D</item>
        <item>#B1B3DD</item>
        <item>#9ADBA9</item>
        <item>#787676</item>
    </string-array>

    <string-array name="color_inbox">
        <item>#E53935</item>
        <item>#D81B60</item>
        <item>#3FE411</item>
        <item>#3949AB</item>
        <item>#5AA7EB</item>
        <item>#EF5350</item>
        <item>#000000</item>
        <item>#FFFFFF</item>
        <item>#F7FF0D</item>
        <item>#D80BE6</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_call">VideoCallActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Persona description-->
    <string name="architect">Bạn là người giàu trí tưởng tượng và có đầu óc suy nghĩ một cách chiến lược, luôn có kế hoạch cho mọi thứ</string>
    <string name="logician">Bạn là người có đầu óc sáng tạo, với khát khao cháy bỏng dành cho tri thức </string>
    <string name="commander">Bạn là nhà lãnh đạo giàu trí tưởng tượng nhưng cũng rất táo bạo và mạnh mẽ, bạn luôn tìm ra cách giải quyết vấn đề mà không từ bỏ</string>
    <string name="debater">Bạn là người thông minh và tò mò về mọi thứ, bạn luôn khao khát những thử thách về tri thức</string>
    <string name="advocate">Bạn là người trầm tính và bí ẩn, nhưng cũng là một nhà tư tưởng đầy cảm hứng và nhiệt huyết</string>
    <string name="mediator">Bạn là người thơ mộng, tốt bụng và giàu lòng vị tha, bạn luôn sẵn lòng giúp đỡ người khác</string>
    <string name="protagonist">Cuốn hút và giỏi tạo cảm hứng, lời nói của bạn như có phép thôi miên người nghe</string>
    <string name="campaigner">Yêu tự do, giỏi giao tiếp, sáng tạo và nhiệt tình, bạn là người luôn lạc quan trong mọi hoàn cảnh</string>
    <string name="logistician">Bạn là người thực tế, suy nghĩ một cách logic và khoa học, bạn luôn tỏ ra đáng tin cậy đối với những người xung quanh</string>
    <string name="defender">Tận tâm và ấm áp, bạn luôn sẵn sàng bảo vệ những người mà bạn yêu thương</string>
    <string name="executive">Bạn là nhà quản trị xuất sắc nhất, bạn giỏi quản lý không chỉ công việc mà cả con người </string>
    <string name="consul">Bạn là người cực kỳ nổi bật, hòa đồng và luôn quan tâm tới người khác</string>
    <string name="virtuoso">Bạn là người thích vọc vạch mọi thứ, luôn táo bạo, thực tế và tò mò. Vậy nên bạn thông thạo rất nhiều công việc</string>
    <string name="adventurer">Bạn có máu nghệ sĩ trong người, luôn sẵn sàng khám phá và trải nghiệm những thứ mới mẻ</string>
    <string name="entrepreneur">Bạn thông minh, nhiệt huyết và táo bạo, bạn luôn sống hết mình nhưng cuộc sống đó cũng đầy mạo hiểm và thử thách</string>
    <string name="entertainer">Bạn là mẫu người ngẫu hứng, năng động và nhiệt huyết, cuộc sống không bao giờ buồn chán đối với bạn</string>

</resources>